--- a/angular-basic/src/app/menu/menu.component.html
+++ b/angular-basic/src/app/menu/menu.component.html
@@ -1,6 +1,5 @@
-<div class="container"
-     fxLayout="column"
-     fxLayoutGap="10px">
+
+<div class="container" fxLayout="column" fxLayoutGap="10px">
 
   <div fxFlex>
     <div>
@@ -19,22 +18,6 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div fxFlex *ngIf="selectedDish">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>{{selectedDish.name | uppercase}}</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src={{selectedDish.image}} alt={{selectedDish.name}}>
-      <mat-card-content>
-        <p>{{selectedDish.description}}
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
+
+  <app-dishdetail></app-dishdetail>
 </div>
