--- a/angular-basic/src/app/home/home.component.html
+++ b/angular-basic/src/app/home/home.component.html
@@ -46,4 +46,7 @@
       <p>{{leader.description}}</p>
     </mat-card-content>
   </mat-card>
+  <div [hidden]="dish">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
 </div>
