--- a/angular-basic/src/app/dishdetail/dishdetail.component.html
+++ b/angular-basic/src/app/dishdetail/dishdetail.component.html
@@ -51,9 +51,35 @@
           <p>-{{comment.author}} {{comment.date|date}}</p>
         </div>
       </mat-list>
+      <mat-list *ngIf="commentForm.status==='VALID'">
+          <div class="comment-text">
+              <p>{{commentForm.value.comment}}</p>
+              <p>{{commentForm.value.rating}}</p>
+              <p>-{{commentForm.value.author}}</p>
+            </div>
+      </mat-list>
     </mat-card-content>
   </mat-card>
+  
 
+  <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+    <p>
+      <mat-form-field>
+          <input matInput formControlName="author" placeholder="Name" type="text">
+          <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+        </mat-form-field>
+      </p>
+    <p>
+      <mat-slider tickInterval=1 thumbLabel=true formControlName="rating" min="1" max="5" step="1" ></mat-slider>
+    </p>
+    <p>
+      <mat-form-field>
+        <input matInput formControlName="comment" placeholder="Your Comment" type="text">
+        <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+      </mat-form-field>
+    </p>
+    <button type="submit" mat-button class="background-primary text-floral-white"  [disabled]="cform.form.invalid">Submit</button>
+  </form>
 </div>
 <div [hidden]="dish">
   <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
