--- a/angular-basic/src/app/dishdetail/dishdetail.component.html
+++ b/angular-basic/src/app/dishdetail/dishdetail.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div fxFlex *ngIf="dish" [@visibility]="visibility">
+  <div fxFlex *ngIf="dish" [@visibility]="visibility"  [@expand]>
   <mat-card>
     <mat-card-header>
       <mat-card-title>
@@ -36,7 +36,7 @@
   </mat-card>
 </div>
 
-<div fxFlex *ngIf="dish" [@visibility]="visibility">
+<div fxFlex *ngIf="dish" [@visibility]="visibility"  [@expand]>
   <mat-card>
     <mat-card-header>
       <mat-card-title>
